--- a/css/kasper.css
+++ b/css/kasper.css
@@ -10,6 +10,9 @@
 
 :root {
     --main-color: #19c8fa;
+    --secound-color: #777777;
+    --over-color: rgb(0 0 0 / 60%);
+    --line-height: 2;
 }
 
 html {
@@ -30,6 +33,63 @@ ul {
     list-style: none;
 }
 
+/* Start Main Header */
+.main-header {
+    text-align: center;
+}
+
+.main-header h2 {
+ text-transform: uppercase;
+ font-size: 40px;
+ font-weight: 400;
+ margin: 0 0 70px;
+ position: relative;
+}
+
+.main-header h2:before {
+    content: "";
+    width: 120px;
+    height: 2px;
+    background-color: #333333;
+    position: absolute;
+    left: 50%;
+    bottom: -30px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+.main-header h2:after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    border: 2px solid #333333;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    bottom: -41px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+.main-header h2 + p {
+    width: 550px;
+    max-width: 100%;
+    color: var(--secound-color);
+    line-height: var(--line-height);
+    margin: 0 auto 100px;
+}
+/* End Main Header */
 /* Small Screen */
 @media (min-width: 768px) {
     .container {
@@ -137,6 +197,7 @@ header .container nav ul a:hover::before{
         width: 100%;
         top: 100%;
         left: 0;
+        background-color: var(--over-color);
     }
 
     header .container nav:hover ul li {
@@ -167,8 +228,7 @@ header .container nav ul a:hover::before{
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgb(0 0 0 /60%);
-    position: relative;
+    background-color: var(--over-color);
 }
 
 .landing .text {
@@ -195,7 +255,7 @@ header .container nav ul a:hover::before{
 
 .landing .text p {
     font-size: 14px;
-    line-height: 2;
+    line-height: var(--line-height);
 }
 
 .landing i:first-of-type {
@@ -214,4 +274,86 @@ header .container nav ul a:hover::before{
     color: #ddd;
 }
 
+@media (max-width: 767px) {
+    .landing .text {
+        width: 100%;
+    }
+
+    .landing i {
+        display: none;
+    }
+}
+
+.landing ul {
+    position: absolute;
+    display: flex;
+    left: 50%;
+    bottom: 30px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+.landing ul li {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 1px solid var(--main-color);
+    margin-right: 10px;
+}
+
+.landing .active {
+    background-color: var(--main-color);
+}
 /* End Landing */
+
+/* Start Services */
+.services {
+    padding: 100px 0;
+}
+
+.services .srv-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    row-gap: 60px;
+    column-gap: 40px;
+}
+
+.services .srv-content .srv-box {
+    display: flex;
+    text-align: left;
+}
+
+.services .srv-content .srv-box i {
+    margin-right: 50px;
+}
+
+.services .srv-content .srv-box .text h3 {
+    font-size: 19px;
+    font-weight: 700;
+    color: var(--main-color);
+    padding-bottom: 30px;
+}
+
+.services .srv-content .srv-box .text p {
+    color: var(--secound-color);
+    line-height: var(--line-height);
+}
+
+@media (max-width: 767px) {
+    .services .srv-content .srv-box {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .services .srv-content .srv-box i {
+        margin: 0 0 30px;
+    }
+}
+/* End Services */
