--- a/css/kasper.css
+++ b/css/kasper.css
@@ -30,6 +30,27 @@ body {
     padding: 0 20px;
 }
 
+/* Small */
+@media (min-width: 768px) {
+.container {
+    width: 750px;
+}
+}
+
+/* medium */
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+
+/* large */
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
+
 ul {
     list-style: none;
 }
@@ -153,6 +174,7 @@ header .container nav .fa-bars {
     font-size: 22px;
     font-weight: 900;
     padding-right: 15px;
+    /* z-index: 100; */
 }
 
 header .container nav ul {
@@ -189,10 +211,6 @@ header .container nav ul a:hover::before{
 
     header .container nav ul {
         display: none;
-    }
-
-    header .container nav:hover  ul {
-        display: flex;
         flex-wrap: wrap;
         position:absolute;
         width: 100%;
